--- a/Board/development.ini
+++ b/Board/development.ini
@@ -5,6 +5,9 @@
 
 [app:main]
 use = egg:Board
+mongo_uri = mongodb://vagrant@localhost:27017/board 
+
+
 
 pyramid.reload_templates = true
 pyramid.debug_authorization = false
